add reclaim port operation